--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.github.yukuku:ambilwarna:2.0.1'
 }
